--- a/doc/style.css
+++ b/doc/style.css
@@ -21,3 +21,11 @@ body {
     padding: 0.5em;
 
 }
+
+[indent] {
+    color: rgba(0, 0, 0, 0);
+}
+
+[indent]::after {
+    content: attr(indent);
+}
