--- a/doc/style.css
+++ b/doc/style.css
@@ -132,6 +132,17 @@ table.member-table td:nth-child(2n) {
     font-size: 1.2em;
 }
 
+.region.heading {
+    text-align: center;
+    font-size: 3em;
+    margin-top: 1.5em;
+}
+
+.section.heading {
+    margin-top: 1em;
+    border-bottom: 1px solid #AAA;
+}
+
 [indent] {
     color: rgba(0, 0, 0, 0);
 }
