--- a/doc/style.css
+++ b/doc/style.css
@@ -89,6 +89,17 @@ article {
     content: "::";
 }
 
+.code-link {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 2px dashed rgba(255, 255, 255, 0.2);
+    padding-bottom: 0.1em;
+}
+
+.code-link:hover {
+    border-bottom: 2px dashed rgba(255, 255, 255, 0.5);
+}
+
 .note {
     background-color: blue;
     color: white;
